--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "mydashboard-utils",
-  "version": "2.0",
+  "version": "2.0.2",
   "description": "Biblioteca de utilidades e constantes myDashboard",
   "type": "module",
   "main": "dist/index.cjs",
   "module": "dist/index.mjs",
   "scripts": {
-    "build:esm": "esbuild index.js --bundle --platform=node --format=esm --outfile=dist/index.mjs",
-    "build:cjs": "esbuild index.js --bundle --platform=node --format=cjs --outfile=dist/index.cjs",
+    "build:esm": "esbuild index.js --bundle --platform=node --format=esm --outdir=dist --out-extension:.js=.mjs",
+    "build:cjs": "esbuild index.js --bundle --platform=node --format=cjs --outdir=dist --out-extension:.js=.cjs",
     "build": "npm run build:esm && npm run build:cjs",
     "prepare": "npm run build",
     "lint": "eslint .",
@@ -17,6 +17,10 @@
     ".": {
       "import": "./dist/index.mjs",
       "require": "./dist/index.cjs"
+    },
+    "./*": {
+      "import": "./dist/*.mjs",
+      "require": "./dist/*.cjs"
     }
   },
   "repository": {
