--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "mydashboard-utils",
-  "version": "2.0.2",
+  "version": "2.0.3",
   "description": "Biblioteca de utilidades e constantes myDashboard",
   "type": "module",
   "main": "dist/index.cjs",
   "module": "dist/index.mjs",
   "scripts": {
-    "build:esm": "esbuild index.js --bundle --platform=node --format=esm --outdir=dist --out-extension:.js=.mjs",
-    "build:cjs": "esbuild index.js --bundle --platform=node --format=cjs --outdir=dist --out-extension:.js=.cjs",
-    "build": "npm run build:esm && npm run build:cjs",
+    "build:esbuild": "node esbuild.config.mjs",
+    "build": "npm run build:esbuild",
     "prepare": "npm run build",
     "lint": "eslint .",
     "lint:fix": "eslint --fix ."    
