--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mydashboard-utils",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "description": "Biblioteca de utilidades e constantes myDashboard",
   "type": "module",
   "main": "dist/index.cjs",
@@ -43,5 +43,9 @@
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.0"
-  }
+  },
+  "files": [
+    "dist",
+    "README.md"
+  ]
 }
